# recon-lite

./: .gitignore  ARCHITECTURE.md  Article.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  README.md  VIS_SPEC.md  algorithm_fix_15sep.txt  baseline_integration_plan.md  check_moves.py  cursor_network_s_self_learning_on_pawn_8th_jan.md  debug_output_quick.txt  debug_trace.txt  diff_before_it_worked.md  fix_m5_structure.py  fix_run_script.py  graph_spec.json  intermediate_bridge_viz.html  novelty_angles.md  old_engine.py  old_engine_utf8.py  old_krk_nodes.py  old_krk_nodes_utf8.py  pyproject.toml  recon_roadmap_m2.md  recon_roadmap_m3_fast_plasticity.md  recon_roadmap_m4_slow_consolidation_and_eval.md  recon_roadmap_m7_distillation.md  updates_continuous.md  walkthrough_24jan.md  weights_pre_mlp_game.json
Presentation/: graph_demo_single_file_html.html  standalone_html_example.html
configs/: deep_leg_sweep.yaml
demos/: DEMOS_README.md  krk_checkmate_demo.py  krk_interactive_game.json  krk_play_demo.py  krk_visualization_data.json  sequence_demo.py  test_visualization.html
docs/: CONTINUOUS_ACTIVATIONS_README.md  HOWTO_RUN_TRAIN_EVAL.md  KRK_API_INTERFACE.md  KRK_CURRICULUM_ANIMATION.md  MACROGRAPH_OVERVIEW.md  TRACE_AND_EVAL.md  architecture.md
examples/: formal_trace_viewer.html
notes/: curriculum_plan.md  krk_curriculum_training.md  logbook.md  pack_template_design.md  subgraph_delegation_update.md
publication_notes/: verification.md
reports/: Hector_Article_Draft.md  Hector_Article_Draft_AAAI26.aux  Hector_Article_Draft_AAAI26.tex  baseline_games.txt  baseline_weights_before.txt  kpk_anchor.jsonl  kpk_trace.jsonl  kqk_eval.jsonl  kqk_eval_frozen.jsonl  kqk_eval_no_plastic.jsonl  kqk_trace.jsonl  krk_anchor.jsonl  krk_anchor_500.jsonl  krk_pure_path_report.md  krk_trace.jsonl  krk_trace_summary.csv  krk_trace_summary.json  pandoc_header.tex  partial_xp_test.txt  post_revert_baseline.txt  project_summary_for_ai.md  stage2_baseline_run.txt  sweep_analysis.md  tactics_baseline.md
scripts/: AI_README.md  analyze_depth.py  analyze_gpawn.py  analyze_kpk_pawns.py  analyze_stem_cells.py  analyze_sweep.py  analyze_training.py  (+99 more)
(+703 files in other folders)
