[project]
name = "recon-lite"
version = "0.1.0"
description = "Minimal Request–Confirmation Network (ReCoN) executor with logging"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-chess>=1.999",
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["recon_lite*"]
